--- a/footer.css
+++ b/footer.css
@@ -1,3 +1,30 @@
-.body {
-  display: flex-important;
+.footer {
+  display: flex;
+  justify-content: space-around;
+  background-color: rgb(95, 95, 153);
+  padding: 20px;
+  color: white;
+}
+
+.footer-section {
+  flex: 1;
+  padding: 10px;
+}
+
+.footer a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.fa {
+  padding: 10px;
+  font-size: 20px;
+  color: #333;
+}
+
+.fa:hover {
+  color: #007bff;
+}
+li {
+  list-style: none;
 }
